agrege una tabla

--- a/index.html
+++ b/index.html
@@ -173,7 +173,24 @@
         });
     </script>
 
-    <p>HOLA MUNDITO</p>
+    <div class="order-1">
+        <div class="order-2">
+            <div class="order-3">
+                <section class="section-1">
+                    <table>
+                        <th>1</th>
+                        <th>2</th>
+                        <th>3</th>
+                        <th>1</th>
+                        <th>3</th>
+                        <th>3</th>
+                    </table>
+                </section>
+            </div>
+        </div>
+
+    </div>
+
 </body>
 
 </html>
